Fix alignment on additional properties (#251)
# Pull Request

## 📖 Description

Some fixes for the dictionary control (`additionalProperties` keyword):
- Styling alignment fixes
- Allow `true` to generate an un-typed control
- Add tests for the dictionary control

### 🎫 Issues

Closes #134 

## 👩‍💻 Reviewer Notes

Currently I do not have access to a recent macos version so the snapshots check will fail. This will be updated in future.

## ✅ Checklist

### General

<!--- Review the list and put an x in the boxes that apply. -->

- [x] I have added tests for my changes.
- [x] I have tested my changes.
- [ ] I have updated the project documentation to reflect my changes.

--- a/packages/design-to-code-react/src/form/controls/utilities/dictionary.style.css
+++ b/packages/design-to-code-react/src/form/controls/utilities/dictionary.style.css
@@ -17,8 +17,18 @@
 }
 
 .dtc-dictionary_item-control-remove-trigger {
-    bottom: 6px;
+    bottom: 16px;
     top: unset;
+}
+
+.dtc-dictionary_control {
+    flex-grow: 1;
+}
+
+.dtc-dictionary_control-region {
+    position: relative;
+    height: 30px;
+    padding-bottom: 5px;
 }
 
 .dtc-dictionary_control-label {
