--- a/packages/design-to-code/src/web-components/style/common.add-item.css
+++ b/packages/design-to-code/src/web-components/style/common.add-item.css
@@ -1,4 +1,5 @@
 .dtc-common-add-item {
+    cursor: pointer;
     position: relative;
     appearance: none;
     background: none;
