--- a/packages/design-to-code/src/web-components/style/common.remove-input.css
+++ b/packages/design-to-code/src/web-components/style/common.remove-input.css
@@ -5,7 +5,7 @@
     padding: 2px;
     position: absolute;
     border: none;
-    width: 18px;
+    width: 20px;
     margin: 0;
     height: 18px;
     z-index: 1;
